manifests/postgresql-item/Service-postgresql-item.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: postgresql-item
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.3.0
    helm.sh/chart: postgresql-18.5.2
  name: postgresql-item
  namespace: database
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: postgresql-item
    app.kubernetes.io/name: postgresql
  type: ClusterIP
